<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.aitang.ui.account.ResetPasswordActivity">

    <include
        android:id="@+id/headerview"
        layout="@layout/include_headerview" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_reset_password"
                android:layout_width="match_parent"
                android:layout_height="100pt"
                android:background="@color/color_08D2B2"
                android:gravity="center_vertical"
                android:paddingLeft="24pt"
                android:text="@string/reset_password"
                android:textColor="@color/color_white"
                android:textSize="32pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_16dp"
                android:layout_marginRight="@dimen/margin_16dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_height_45dp"
                    android:layout_marginTop="@dimen/margin_top_15dp"
                    android:background="@null"
                    android:hint="@string/input_phone_number"
                    android:inputType="phone"
                    android:textColor="@color/color_323232"
                    android:textSize="34pt" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/color_E5E5E5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/edit_height_45dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/et_verify"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edit_height_45dp"
                            android:layout_marginTop="@dimen/margin_top_15dp"
                            android:background="@null"
                            android:hint="@string/input_validation_code"
                            android:textColor="@color/color_323232"
                            android:textSize="34pt" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/line_height"
                            android:background="@color/color_E5E5E5" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/bt_code"
                        android:layout_width="200pt"
                        android:layout_height="88pt"
                        android:layout_gravity="bottom"
                        android:background="@color/color_08D2B2"
                        android:text="@string/send_code"
                        android:textColor="@color/color_white"
                        android:textSize="30pt"

                        />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_height_45dp"
                    android:layout_marginTop="@dimen/margin_top_15dp"
                    android:background="@null"
                    android:hint="@string/input_new_password"
                    android:inputType="textPassword"
                    android:textColor="@color/color_323232"
                    android:textSize="34pt" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/color_E5E5E5"

                    />


                <EditText
                    android:id="@+id/et_confirm_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_height_45dp"
                    android:layout_marginTop="@dimen/margin_top_15dp"
                    android:background="@null"
                    android:hint="@string/input_confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/color_323232"
                    android:textSize="34pt" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/color_E5E5E5" />

                <Button
                    android:id="@+id/bt_ok"
                    android:layout_width="360pt"
                    android:layout_height="88pt"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="100pt"
                    android:background="@color/color_08D2B2"
                    android:text="@string/complete"
                    android:textColor="@color/color_white"
                    android:textSize="42pt" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
