<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context="com.example.administrator.aitang.ui.mine.QuestionFeedbackActivity">

    <include
        android:id="@+id/headerview"
        layout="@layout/include_headerview" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_group_height_50dp"
        android:background="@color/color_08D2B2"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_16dp"
        android:text="@string/question_feedback_tip"
        android:textColor="@color/color_white"
        android:textSize="@dimen/txt_16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_16dp"
        android:orientation="vertical">

        <com.example.administrator.aitang.views.ScrollEditText
            android:id="@+id/et_proposal"
            style="@style/text_style_14sp_black"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/opinion_content_title"
            android:layout_weight="7"
            android:background="@drawable/shape_scroll_edittext_bg"
            android:gravity="top"
            android:hint="@string/input_hint"
            android:inputType="textMultiLine"
            android:padding="10pt"
            android:singleLine="false"
            android:textColor="@color/color_323232" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <Button
                android:id="@+id/btn_submit"
                style="@style/btn_style"
                android:layout_centerInParent="true"
                android:text="@string/submit_proposal" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
