<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context="com.example.administrator.aitang.ui.mine.ChangePwdActivity">

    <include
        android:id="@+id/headerview"
        layout="@layout/include_headerview" />

    <TextView
        style="@style/green_title_style"
        android:text="@string/change_pwd" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--下一步按钮以上的布局容器-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="500pt"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="300pt">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <TextView
                            android:id="@+id/tv_tip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:text="@string/pwd_tip"
                            android:textSize="@dimen/txt_14sp" />

                        <TextView
                            android:id="@+id/tv_phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_tip"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/margin_10dp"
                            android:text=""
                            android:textColor="@color/color_text_black_54"
                            android:textSize="60pt" />

                    </RelativeLayout>


                </RelativeLayout>


                <View
                    style="@style/line_style"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:layout_marginRight="@dimen/margin_16dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200pt">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/margin_16dp"
                        android:layout_marginRight="@dimen/margin_16dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text_style_16sp_black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="@dimen/margin_10dp"
                            android:text="@string/input_code" />

                        <EditText
                            android:id="@+id/et_code"
                            android:layout_width="0pt"
                            android:layout_height="80pt"
                            android:layout_weight="5"
                            android:background="@drawable/shape_edit_gray_frame"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/margin_16dp"
                            android:textColor="@color/color_323232" />

                        <Button
                            android:id="@+id/bt_send_code"
                            android:layout_width="200pt"
                            android:layout_height="80pt"
                            android:layout_marginLeft="@dimen/margin_10dp"
                            android:background="@color/color_08D2B2"
                            android:text="发送"
                            android:textColor="@color/color_white"
                            android:textSize="@dimen/txt_16sp" />

                    </LinearLayout>


                </RelativeLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View style="@style/line_style" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_group_height_50dp"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:layout_marginRight="@dimen/margin_16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text_style_16sp_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_pwd" />

                    <EditText
                        android:id="@+id/et_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_height_45dp"
                        android:layout_marginLeft="@dimen/margin_10dp"
                        android:background="@drawable/shape_edit_bg"
                        android:hint="@string/pwd_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/color_323232"
                        android:textSize="32pt" />
                </LinearLayout>

                <View style="@style/line_style" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_group_height_50dp"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:layout_marginRight="@dimen/margin_16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text_style_16sp_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_new_pwd" />

                    <EditText
                        android:id="@+id/et_confirm_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_height_45dp"
                        android:layout_marginLeft="@dimen/margin_10dp"
                        android:background="@drawable/shape_edit_bg"
                        android:hint="@string/pwd_hint_1"
                        android:inputType="textPassword"
                        android:textColor="@color/color_323232"
                        android:textSize="32pt" />
                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btn_complete"
                style="@style/btn_style"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60pt"
                android:text="@string/submit_change" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
